Intruduce Construct for Safety
meeting open/close principle.

--- a/Code/Abstraction/Abstraction.vcxproj
+++ b/Code/Abstraction/Abstraction.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Abstraction.cpp" />
+    <ClCompile Include="src\SafetyProvider.cpp" />
     <ClCompile Include="src\TimedValue.cpp" />
     <ClCompile Include="src\Value.cpp" />
     <ClCompile Include="src\Vector3D.cpp" />
@@ -152,6 +153,8 @@
     <ClInclude Include="include\Abstraction\Header.h" />
     <ClInclude Include="include\Abstraction\Optional.h" />
     <ClInclude Include="include\Abstraction\Ringbuffer.h" />
+    <ClInclude Include="include\Abstraction\SafetyProvider.h" />
+    <ClInclude Include="include\Abstraction\SafetyRequirement.h" />
     <ClInclude Include="include\Abstraction\TimedValue.h" />
     <ClInclude Include="include\Abstraction\Timestamp.h" />
     <ClInclude Include="include\Abstraction\Unit.h" />
