--- a/Code/Test_Application/Test_Application.vcxproj
+++ b/Code/Test_Application/Test_Application.vcxproj
@@ -63,7 +63,7 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>../gmock/include;../Abstraction/include;../Domain/include;../Application/include;../cpp_mock/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../gmock/include;../Abstraction/include;../Domain/include;../DroneController/include;../Application/include;../cpp_mock/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
