--- a/Code/ROS_Mock/ROS_Mock.vcxproj.filters
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClInclude Include="ros\rosTiming.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="ardrone_autonomy\Navdata.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
