--- a/Code/ROS_Mock/ROS_Mock.vcxproj.filters
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="ardrone_autonomy\Navdata.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="geometry_msgs\Twist.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
