--- a/Code/ROS_Mock/ROS_Mock.vcxproj
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj
@@ -89,7 +89,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Abstraction/include;../DroneController/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,6 +151,7 @@
     <ClInclude Include="geometry_msgs\Point.h" />
     <ClInclude Include="geometry_msgs\PoseStamped.h" />
     <ClInclude Include="geometry_msgs\Quaternion.h" />
+    <ClInclude Include="geometry_msgs\Twist.h" />
     <ClInclude Include="geometry_msgs\Vector3.h" />
     <ClInclude Include="mavros_msgs\CommandBool.h" />
     <ClInclude Include="mavros_msgs\CommandBoolRequest.h" />
