--- a/Code/ROS_Mock/ROS_Mock.vcxproj.filters
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj.filters
@@ -116,5 +116,8 @@
     <ClInclude Include="geometry_msgs\Twist.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="std_msgs\Empty.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
