Updated Files due to Ubuntu 14 and c++11

--- a/Code/Abstraction/Abstraction.vcxproj.filters
+++ b/Code/Abstraction/Abstraction.vcxproj.filters
@@ -72,4 +72,14 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt">
+      <Filter>Ressourcendateien</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml">
+      <Filter>Ressourcendateien</Filter>
+    </Xml>
+  </ItemGroup>
 </Project>
