--- a/Code/DroneController/CMakeLists.txt
+++ b/Code/DroneController/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(DroneController)
 
+add_compile_options(-std=c++11)
+
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
 
@@ -10,7 +12,7 @@ find_package(
   COMPONENTS
     roscpp
     rospy
-
+	
     Abstraction
 )
 
@@ -20,8 +22,8 @@ find_package(
 ###################################
 catkin_package(
 #  INCLUDE_DIRS include
-	LIBRARIES coexController
-	CATKIN_DEPENDS roscpp rospy std_msgs Abstraction_lib
+	LIBRARIES DroneController
+	CATKIN_DEPENDS roscpp rospy Abstraction_lib
 #  DEPENDS system_lib
 )
 
