--- a/Code/calling/calling.vcxproj
+++ b/Code/calling/calling.vcxproj
@@ -149,6 +149,12 @@
     <ClInclude Include="include\calling\Caller.h" />
     <ClInclude Include="include\calling\Calling.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
