--- a/Code/keyboard/keyboard.vcxproj
+++ b/Code/keyboard/keyboard.vcxproj
@@ -154,6 +154,12 @@
   <ItemGroup>
     <ClInclude Include="include\keyboard\KeyReader.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
