--- a/Code/parrot/parrot.vcxproj
+++ b/Code/parrot/parrot.vcxproj
@@ -158,6 +158,12 @@
     <ClInclude Include="include\parrot\parrotStatus.h" />
     <ClInclude Include="include\parrot\parrotTransmitter.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
