--- a/Code/threading/threading.vcxproj
+++ b/Code/threading/threading.vcxproj
@@ -156,6 +156,12 @@
     <ClInclude Include="include\threading\rosThread.h" />
     <ClInclude Include="include\threading\Thread.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
