--- a/Code/Abstraction/Abstraction.vcxproj
+++ b/Code/Abstraction/Abstraction.vcxproj
@@ -163,6 +163,12 @@
     <ClInclude Include="include\Abstraction\Value.h" />
     <ClInclude Include="include\Abstraction\Vector3D.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
