--- a/Code/Adapter/Adapter.vcxproj
+++ b/Code/Adapter/Adapter.vcxproj
@@ -165,6 +165,12 @@
     <ClInclude Include="include\Adapter\StateBuilder.h" />
     <ClInclude Include="include\Adapter\StateHandler.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
