--- a/Code/Application/Application.vcxproj
+++ b/Code/Application/Application.vcxproj
@@ -159,6 +159,12 @@
       <Project>{8651ab26-1a03-46c4-9a72-8a3dafa3b7a6}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
