--- a/Code/PosControl/PosControl.vcxproj.filters
+++ b/Code/PosControl/PosControl.vcxproj.filters
@@ -17,6 +17,9 @@
     <Filter Include="Quelldateien">
       <UniqueIdentifier>{ce45fac4-cfa3-4b3e-b6f8-ae43fff1b1cd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Ressourcendateien">
+      <UniqueIdentifier>{0ccc1c6d-71f5-4057-93ab-74b34b7d6282}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\PosControl\PosBridge.h">
@@ -25,5 +28,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt">
+      <Filter>Ressourcendateien</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml">
+      <Filter>Ressourcendateien</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
