--- a/Code/coex/coex.vcxproj
+++ b/Code/coex/coex.vcxproj
@@ -181,6 +181,12 @@
     <ClInclude Include="include\coex\Joystick.h" />
     <ClInclude Include="include\coex\JoystickAxis.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="package.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
