--- a/Code/PosControl/PosControl.vcxproj
+++ b/Code/PosControl/PosControl.vcxproj
@@ -96,7 +96,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../Domain/Debug;../DroneController/Debug;../Application/Debug;../Adapter/Debug;../ROS_Mock/Debug;../parrot/Debug;../Controller/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Pose.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Pose.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;DroneControlable.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
