--- a/Code/parrot/CMakeLists.txt
+++ b/Code/parrot/CMakeLists.txt
@@ -11,28 +11,14 @@ find_package(
     roscpp
     rospy
 	std_msgs
-    sensor_msgs
 	geometry_msgs
+	sensor_msgs
 
 	ardrone_autonomy
     
 	Domain
 	DroneController
     Adapter
-
-)
-
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-## Generate added messages and services with any dependencies listed here
-generate_messages(
-	DEPENDENCIES
-		std_msgs
-		sensor_msgs
-		geometry_msgs
-		ardrone_autonomy
 )
 
 
@@ -45,6 +31,7 @@ catkin_package(
 	CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs ardrone_autonomy
 #  DEPENDS system_lib
 )
+
 
 ###########
 ## Build ##
@@ -70,10 +57,10 @@ add_library(parrotController
 )
 
 ## Add cmake target dependencies of the executable
-add_dependencies(parrotController ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} Domain_lib Adapter_lib DroneController_lib)
+add_dependencies(parrotController ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} Domain_lib DroneController_lib Adapter_lib)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(parrotController ${catkin_LIBRARIES} Domain_lib Adapter_lib DroneController_lib)
+target_link_libraries(parrotController ${catkin_LIBRARIES} Domain_lib DroneController_lib Adapter_lib)
 
 
 #############
