--- a/Code/Controller/package.xml
+++ b/Code/Controller/package.xml
@@ -19,12 +19,6 @@
 	<depend>rospy</depend>
 	<depend>std_msgs</depend>
 	
-	<depend>Abstraction</depend>
+	<depend>Domain</depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
 </package>
