--- a/Code/DroneController/DroneController.vcxproj.filters
+++ b/Code/DroneController/DroneController.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="src\DroneControlable.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\VoltageOK.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\PercentageOK.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DroneController\Batteryable.h">
