--- a/Code/DroneController/DroneController.vcxproj
+++ b/Code/DroneController/DroneController.vcxproj
@@ -147,10 +147,12 @@
     <ClCompile Include="src\Batteryable.cpp" />
     <ClCompile Include="src\DroneControlable.cpp" />
     <ClCompile Include="src\IMUable.cpp" />
+    <ClCompile Include="src\PercentageOK.cpp" />
     <ClCompile Include="src\PoseControlable.cpp" />
     <ClCompile Include="src\IMUState.cpp" />
     <ClCompile Include="src\Pose.cpp" />
     <ClCompile Include="src\Statusable.cpp" />
+    <ClCompile Include="src\VoltageOK.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DroneController\PercentageOK.h" />
