--- a/Code/PosControl/PosControl.vcxproj
+++ b/Code/PosControl/PosControl.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClCompile Include="src\Integral1.cpp" />
     <ClCompile Include="src\Integral2.cpp" />
+    <ClCompile Include="src\ManualController.cpp" />
     <ClCompile Include="src\PosBridge.cpp" />
     <ClCompile Include="src\PoseBuilder.cpp" />
     <ClCompile Include="src\RosBridge.cpp" />
