edited PosControl to be able to Test PosBuilder online.

--- a/Code/PosControl/CMakeLists.txt
+++ b/Code/PosControl/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(AutoController
 	src/PosBridge.cpp
 	src/PoseBuilder.cpp
 	src/RosBridge.cpp
+	src/Transmitter_Mock.cpp
 )
 
 add_executable(BagPlotter_ND_AV 
