--- a/Code/Controller/Controller.vcxproj
+++ b/Code/Controller/Controller.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{8651ab26-1a03-46c4-9a72-8a3dafa3b7a6}</ProjectGuid>
-    <RootNamespace>Domain</RootNamespace>
+    <RootNamespace>Controller</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>04_03_Controller</ProjectName>
   </PropertyGroup>
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <SourcePath>./src;../Abstraction/src;$(SourcePath)</SourcePath>
+    <SourcePath>./src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -144,9 +144,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Abstraction\Abstraction.vcxproj">
-      <Project>{a80faebe-6013-4403-a06c-b2a178b5cf4f}</Project>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Controller.cpp" />
